# fortress-engine

./: .gitignore  CMakeLists.txt  README.md
include/: Application.h  Camera.h  Input.h  KeyCodes.h  Player.h  Renderer.h  Window.h
shaders/: sprite.frag  sprite.vert
src/: Application.cpp  Camera.cpp  Camera.h  Input.cpp  Player.cpp  Player.h  Renderer.cpp  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Window.cpp  main.cpp
